--- a/src/assets/styles/layout/header.css
+++ b/src/assets/styles/layout/header.css
@@ -1,7 +1,6 @@
-
-.header{
+.header {
     z-index: 10;
-    height: 150px;
+    height: 100px;
     width: 100%;
     position: absolute;
     padding-top: 0;
@@ -11,43 +10,42 @@
     align-items: center;
 }
 
-.header-left{
+.header-left {
     display: flex;
     align-items: center;
-    margin-left: 30px;
+    margin-left: 20px;
+    gap: 5px;
+}
+
+.header-right {
+    display: flex;
+    align-items: center;
     gap: 10px;
+    margin-right: 20px;
 }
 
-.header-right{
-    display: flex;
-    align-items: center;
-    gap: 15px;
-    margin-right: 30px;
-
-}
-
-.header-text{
+.header-text {
     font-family: 'Roboto', sans-serif;
-    font-size: 25px;
-    font-weight: 500;
+    font-size: 20px;
+    font-weight: 400;
     color: var(--text-color-dark);
-    letter-spacing: 0.5px;
+    letter-spacing: 0.4px;
 }
 
-.icon-circle{
-    width:60px;
-    height:60px;
-    font-size: 30px;
+.icon-circle {
+    width: 50px;
+    height: 50px;
+    font-size: 24px;
     cursor: pointer;
     border-radius: 50%;
     align-items: center;
-    color: var(--text-color-dark);;
+    color: var(--text-color-dark);
     justify-content: center;
     display: flex;
     transition: background-color 0.3s ease;
 }
 
-.icon-circle:hover{
+.icon-circle:hover {
     background: var(--gradient-bottom);
     color: var(--white-color);
 }
