--- a/src/assets/styles/components/chat/Chat.css
+++ b/src/assets/styles/components/chat/Chat.css
@@ -28,3 +28,10 @@
     border-radius: 50%;
     margin: 50px auto;
 }
+
+.response{
+    height: 200px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    text-align: justify;
+}
